--- a/grid_area.html
+++ b/grid_area.html
@@ -33,7 +33,7 @@
     </div>
 </aside>
 
-<footer class="footer"> <h4> the footer</h4></footer>
+<footer class="footer"> <h4> the footer..</h4></footer>
 
 
 </body>
