--- a/grid_area.html
+++ b/grid_area.html
@@ -29,7 +29,7 @@
         <h4>side bar</h4>
     </div>
     <div>
-        <h4>advertise</h4>
+        <h4>advertise...</h4>
     </div>
 </aside>
 
