--- a/grid_area.html
+++ b/grid_area.html
@@ -23,12 +23,12 @@
 <main class="main"> main tag er  container & binbinno container ekane thake</main>
 
 
-<aside class="asidebar"> 
+<aside class=""> 
 
-    <div>
+    <div class="asidebar">
         <h4>side bar</h4>
     </div>
-    <div>
+    <div class="advertise">
         <h4>advertise...</h4>
     </div>
 </aside>
