tab responsive done

--- a/grid_area.html
+++ b/grid_area.html
@@ -6,8 +6,8 @@
     <title>grid area </title>
     <link rel="stylesheet" href="grid_area.css">
 </head>
-<body>
-<header header><h2>grid area property er use. 
+<body id="container">
+<header class="header"><h2>grid area property er use. 
 </h2>
 <h4> the header</h4></header>
 
@@ -20,19 +20,19 @@
 </nav>
 
 
-<main class="main"> main tag er  container & binbinno container ekane thake</main>
+<main class="main"> <p>main tag er  container & bibinno container ekane thakbe</p> </main>
 
 
-<aside class=""> 
+<aside> 
 
-    <div class="asidebar">
-        <h4>side bar</h4>
+    <div class="aside_barr">
+        <h4>aside_barr</h4>
     </div>
-    <div class="advertise">
-        <h4>advertise...</h4>
-    </div>
+   
 </aside>
-
+<div class="advertise">
+    <h4>advertise...</h4>
+</div>
 <footer class="footer"> <h4> the footer..</h4></footer>
 
 
